# URO_ROS2_Gazebo

./: README.md  l.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_control/lib/robot_control/: movement_control  object_detection  pid_controller  pid_controller.py
install/robot_control/lib/robot_control/src/: movement_control.py  object_detection.py
install/robot_control/share/ament_index/resource_index/package_run_dependencies/: robot_control
install/robot_control/share/ament_index/resource_index/parent_prefix_path/: robot_control
install/robot_control/share/robot_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robot_control/share/robot_control/cmake/: robot_controlConfig-version.cmake  robot_controlConfig.cmake
install/robot_control/share/robot_control/environment/: ament_prefix_path.dsv  path.dsv
install/robot_control/share/robot_control/launch/: control.launch.py
install/robot_description/share/ament_index/resource_index/package_run_dependencies/: robot_description
install/robot_description/share/ament_index/resource_index/parent_prefix_path/: robot_description
install/robot_description/share/robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robot_description/share/robot_description/cmake/: robot_descriptionConfig-version.cmake  robot_descriptionConfig.cmake
install/robot_description/share/robot_description/environment/: ament_prefix_path.dsv  path.dsv
install/robot_description/share/robot_description/launch/: display.launch.py
install/robot_description/share/robot_description/models/: plate.sdf
install/robot_description/share/robot_description/urdf/: robot.urdf  robot.urdf.xacro
install/robot_navigation/lib/robot_navigation/: a_star
install/robot_navigation/lib/robot_navigation/src/: a_star.py
install/robot_navigation/share/ament_index/resource_index/package_run_dependencies/: robot_navigation
install/robot_navigation/share/ament_index/resource_index/parent_prefix_path/: robot_navigation
install/robot_navigation/share/robot_navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robot_navigation/share/robot_navigation/cmake/: robot_navigationConfig-version.cmake  robot_navigationConfig.cmake
install/robot_navigation/share/robot_navigation/environment/: ament_prefix_path.dsv  path.dsv
install/robot_navigation/share/robot_navigation/launch/: navigation.launch.py
log/: latest_build
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/launch/: control.launch.py
src/robot_control/src/: movement_control.py  object_detection.py  pid_controller.py  pid_x.py  pid_y.py
src/robot_description/: CMakeLists.txt
src/robot_description/launch/: display.launch.py
src/robot_description/models/: plate.sdf
src/robot_description/urdf/: robot.urdf  robot.urdf.xacro
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_navigation/launch/: navigation.launch.py
src/robot_navigation/src/: a_star.py
